src/htdocs/css/_footer.scss
// compass mixin for transitions
@import "compass/css3/transition";

.nav-transition {
	@include transition(background .25s ease-out);
}

.site-footer {
	padding: $spacing - $vertical-spacing $horizontal-spacing;
}

/* section nav */

.site-sectionnav {
	border: 1px solid $sectionnav-border-color;
	background-color: $sectionnav-background-color;
	margin: $vertical-spacing 0;

	// regular nav items
	> a,
	// items in a nav group
	> section > a,
	// nav group header
	> section > header,
	// current page
	> strong,
	> section > header > strong,
	> section > strong {
		display:block;
		padding:$vertical-spacing/2 $horizontal-spacing/2;
		font-size: 1rem;
	}

	> a,
	> strong,
	> section,
	> section > a,
	> section > strong {
		border-top:1px solid #fff;
		color: #333;
		text-decoration: none;
		@extend .nav-transition;
	}

	> :first-child {
		border-top:none;
	}

	// indent group items
	> section > a,
	> section > strong {
		padding-left: 1.5*$horizontal-spacing;
	}

	// hover styles for nav items
	> a:hover,
	> section > a:hover {
		background-color:$sectionnav-background-color-hover;
	}

	// current page is a strong element
	> strong,
	// or an element with the class "current-page"
	> .current-page,
	> section > strong,
	> section > .current-page {
		background-color:#FFF;
	}

}


/* search form */

.site-search {
	position:relative;
	display: block;
	margin: $vertical-spacing 0;
	padding: $horizontal-spacing/2;
	background-color: $search-background-color;
	border: 1px solid $search-border-color;

	>[type="search"] {
		display:block;
		width:100%;
	}

	> label {
		display:block;
		float:left;
		margin-right:1em;
		font-size:smaller;
	}

	> button {
		display:block;
		clear:both;
		margin-top:1em;
	}

	&:after {
		content: ' ';
		display:block;
		clear:both;
	}
}


/* site nav */

.site-sitenav {
	background-color: $sitenav-background-color;
	margin: $vertical-spacing 0;
	border: 1px solid $sitenav-border-color;
	overflow: visible;

	> a,
	> strong {
		display: block;
		padding: $vertical-spacing/2 $horizontal-spacing/2;
		color: $sitenav-color;
		text-decoration: none;
		@extend .nav-transition;
		border-bottom: 1px solid #FFF;
		&:last-child {
			border-bottom: 0;
		}

		&:hover {
			background-color: $sitenav-background-color-hover;
			color: $sitenav-color-hover;
		}
	}

	> strong,
	> .current-page,
	> strong:hover,
	> .current-page:hover {
		background-color:#fff;
		color:#000;
	}
}


/* common nav */

.site-commonnav {
	clear:both;
	text-align: center;
	padding-top: $spacing;
	margin-bottom:$spacing;

	> hr {
		border: solid #ddd;
		border-width: 1px 0 0;
	}

	> a {
		display: inline-block;
		color: $sitenav-background-color;
		margin: 0 $horizontal-spacing 0 0;

		@media screen and (min-width:$breakpoint-full) {
			font-size: smaller;
		}
	}

}

@media print {
	.site-sectionnav,
	.site-search,
	.site-sitenav,
	.site-commonnav {
		display:none;
	}
}

